--- a/JSON-Coord-Generator/JSON-Coord-Generator/JSON-Coord-Generator.csproj
+++ b/JSON-Coord-Generator/JSON-Coord-Generator/JSON-Coord-Generator.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="About.Designer.cs">
+      <DependentUpon>About.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGrid.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +65,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmGrid.resx">
       <DependentUpon>frmGrid.cs</DependentUpon>
     </EmbeddedResource>
